--- a/frontWebAvanzada/angular.json
+++ b/frontWebAvanzada/angular.json
@@ -21,10 +21,10 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              
+                "src/favicon.ico",
+                "src/assets"
+              
             ],
             "styles": [
               "src/styles.css"
@@ -79,10 +79,10 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              
+                "src/assets",
+                "src/favicon.ico"
+              
             ],
             "styles": [
               "src/styles.css"
